--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,9 +163,14 @@ if(NOT ENABLE_GENERIC)
 	   ${CMAKE_SYSTEM_PROCESSOR} MATCHES "amd64" OR
 	   APPLE)
 		if(_ARCH_64)
-			set(_M_X86 1)
-			set(_M_X86_64 1)
-			add_definitions(-D_M_X86=1 -D_M_X86_64=1 -msse2)
+			if(ENABLE_QT2)
+				set(ENABLE_GENERIC 1) #Qt requires pie, pie breaks JIT
+			else()
+				set(_M_X86 1)
+				set(_M_X86_64 1)
+				add_definitions(-D_M_X86=1 -D_M_X86_64=1 -msse2)
+				set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fno-pie")
+			endif()
 		else()
 			message(FATAL_ERROR "x86_32 is an unsupported platform. Enable generic build if you really want a JIT-less binary.")
 		endif()
@@ -790,6 +795,7 @@ if (OPENSLES_LIBRARIES AND OPENSLES_INCLUDE_DIR)
 endif()
 
 if(ENABLE_QT2)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 	find_package(Qt5Widgets REQUIRED)
 	message("Found Qt version ${Qt5Core_VERSION}, enabling the Qt backend")
 endif()
