--- a/Source/Core/Core/Core.vcxproj
+++ b/Source/Core/Core/Core.vcxproj
@@ -194,6 +194,10 @@
     <ClCompile Include="NetPlayClient.cpp" />
     <ClCompile Include="NetPlayServer.cpp" />
     <ClCompile Include="PatchEngine.cpp" />
+    <ClCompile Include="OnionCoreLoaders\BaseConfigLoader.cpp" />
+    <ClCompile Include="OnionCoreLoaders\GameConfigLoader.cpp" />
+    <ClCompile Include="OnionCoreLoaders\MovieConfigLoader.cpp" />
+    <ClCompile Include="OnionCoreLoaders\NetPlayConfigLoader.cpp" />
     <ClCompile Include="PowerPC\Interpreter\Interpreter.cpp" />
     <ClCompile Include="PowerPC\Interpreter\Interpreter_Branch.cpp" />
     <ClCompile Include="PowerPC\Interpreter\Interpreter_FloatingPoint.cpp" />
@@ -400,6 +404,10 @@
     <ClInclude Include="NetPlayProto.h" />
     <ClInclude Include="NetPlayServer.h" />
     <ClInclude Include="PatchEngine.h" />
+    <ClInclude Include="OnionCoreLoaders\BaseConfigLoader.h" />
+    <ClInclude Include="OnionCoreLoaders\GameConfigLoader.h" />
+    <ClInclude Include="OnionCoreLoaders\MovieConfigLoader.h" />
+    <ClInclude Include="OnionCoreLoaders\NetPlayConfigLoader.h" />
     <ClInclude Include="PowerPC\CPUCoreBase.h" />
     <ClInclude Include="PowerPC\Gekko.h" />
     <ClInclude Include="PowerPC\Interpreter\Interpreter.h" />
