VideoBackends: Do not use Anisotropy on Point filtered textures.
The D3D backend always uses/forces Anisotropic filtering when that is enabled regardless of how the game chooses to configure the texture filtering registers; this causes issues with textures that were not meant to be filtered at all such as gaps where UI elements no longer line up adjacent correctly. Additionally, OpenGL's Anisotropy specification only gives GL_LINEAR based filtering modes defined behavior; implementations are only required to adhere to the mipmap setting. Anisotropy only seemed to work better in OpenGL because some driver implementations decided to implicitly disable filtering when using GL_NEAREST but that is not required by the specification.

--- a/Source/Core/VideoCommon/VideoCommon.vcxproj
+++ b/Source/Core/VideoCommon/VideoCommon.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
@@ -133,6 +133,7 @@
     <ClInclude Include="PixelShaderManager.h" />
     <ClInclude Include="PostProcessing.h" />
     <ClInclude Include="RenderBase.h" />
+    <ClInclude Include="SamplerCommon.h" />
     <ClInclude Include="ShaderGenCommon.h" />
     <ClInclude Include="Statistics.h" />
     <ClInclude Include="GeometryShaderGen.h" />
