--- a/Source/Core/Core/Core.vcxproj
+++ b/Source/Core/Core/Core.vcxproj
@@ -217,6 +217,7 @@
     <ClCompile Include="PowerPC\Jit64IL\JitIL.cpp" />
     <ClCompile Include="PowerPC\Jit64IL\JitIL_Tables.cpp" />
     <ClCompile Include="PowerPC\Jit64\Jit.cpp" />
+    <ClCompile Include="PowerPC\Jit64\Jit64_RegCache.cpp" />
     <ClCompile Include="PowerPC\Jit64\Jit64_Tables.cpp" />
     <ClCompile Include="PowerPC\Jit64\JitAsm.cpp" />
     <ClCompile Include="PowerPC\Jit64\JitRegCache.cpp" />
@@ -410,6 +411,7 @@
     <ClInclude Include="PowerPC\Jit64IL\JitIL.h" />
     <ClInclude Include="PowerPC\Jit64IL\JitIL_Tables.h" />
     <ClInclude Include="PowerPC\Jit64\Jit.h" />
+    <ClInclude Include="PowerPC\Jit64\Jit64_RegCache.h" />
     <ClInclude Include="PowerPC\Jit64\Jit64_Tables.h" />
     <ClInclude Include="PowerPC\Jit64\JitAsm.h" />
     <ClInclude Include="PowerPC\Jit64\JitRegCache.h" />
