--- a/Source/Core/DolphinQt2/CMakeLists.txt
+++ b/Source/Core/DolphinQt2/CMakeLists.txt
@@ -14,6 +14,9 @@ set(SRCS
 	Settings.cpp
 	ToolBar.cpp
 	Config/PathDialog.cpp
+	Config/PropertiesDialog.cpp
+	Config/InfoWidget.cpp
+	Config/FilesystemWidget.cpp
 	GameList/GameFile.cpp
 	GameList/GameList.cpp
 	GameList/GameListModel.cpp
