GCVolume: supports reading all opening.bnr information
DQT2: Game properties dialog contains info tab giving information about the selected iso.

--- a/Source/Core/DolphinQt2/CMakeLists.txt
+++ b/Source/Core/DolphinQt2/CMakeLists.txt
@@ -13,7 +13,10 @@ set(SRCS
 	Resources.cpp
 	Settings.cpp
 	ToolBar.cpp
+	Config/FilesystemWidget.cpp
+	Config/InfoWidget.cpp
 	Config/PathDialog.cpp
+	Config/PropertiesDialog.cpp
 	Config/SettingsWindow.cpp
 	GameList/GameFile.cpp
 	GameList/GameList.cpp
