--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -954,11 +954,11 @@ if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Linux|FreeBSD|Darwin")
 endif()
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 	# Install the application icon and menu item
-	install(FILES Installer/dolphin-emu.svg
+	install(FILES Data/dolphin-emu.svg
 		DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/scalable/apps)
-	install(FILES Installer/dolphin-emu.png
+	install(FILES Data/dolphin-emu.png
 		DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/48x48/apps)
-	install(FILES Installer/dolphin-emu.desktop
+	install(FILES Data/dolphin-emu.desktop
 		DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications)
 	# Install manpages
 	install(FILES Data/dolphin-emu.6
