Added recommended settings

--- a/Data/Sys/GameSettings/RUU.ini
+++ b/Data/Sys/GameSettings/RUU.ini
@@ -20,3 +20,9 @@ EFBToTextureEnable = False
 
 [Video_Stereoscopy]
 StereoConvergence = 381
+
+[Video_Settings]
+SafeTextureCacheColorSamples = 0
+
+[Video_Enhancements]
+ForceFiltering = False
