--- a/Data/Sys/GameSettings/GLG.ini
+++ b/Data/Sys/GameSettings/GLG.ini
@@ -1,4 +1,4 @@
-# NANE01 - Pokemon Puzzle
+# GLGP41 - Largo Winch
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -6,7 +6,7 @@
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
-EmulationIssues = 
+EmulationIssues = Needs real xfb for the videos to work.
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -16,3 +16,7 @@ EmulationIssues =
 
 [ActionReplay]
 # Add action replay cheats here.
+
+[Video_Settings]
+UseXFB = True
+UseRealXFB = True
