--- a/Data/Sys/GameSettings/R8P.ini
+++ b/Data/Sys/GameSettings/R8P.ini
@@ -18,7 +18,5 @@ EmulationIssues = Needs Efb to Ram for BBox (proper graphics).
 # Add action replay cheats here.
 
 [Video_Hacks]
-EFBToTextureEnable = False
-
-[Video_Hacks]
-BBoxEnable = True
+EFBToTextureEnable = False # Fix transitions
+BBoxEnable = True # Required for proper functionality
