--- a/Data/Sys/GameSettings/RUU.ini
+++ b/Data/Sys/GameSettings/RUU.ini
@@ -6,7 +6,7 @@
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
-EmulationIssues = 
+EmulationIssues = Pattern editor requires force filtering disabled and safe texture cache
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
