--- a/Data/Sys/GameSettings/RUU.ini
+++ b/Data/Sys/GameSettings/RUU.ini
@@ -22,7 +22,7 @@ EFBToTextureEnable = False
 StereoConvergence = 381
 
 [Video_Settings]
-SafeTextureCacheColorSamples = 0
+SafeTextureCacheColorSamples = 0 # Allow pattern editor to work properly
 
 [Video_Enhancements]
-ForceFiltering = False
+ForceFiltering = False # Prevent blurring of pattern editor
