Added recommended settings

--- a/Data/Sys/GameSettings/RMC.ini
+++ b/Data/Sys/GameSettings/RMC.ini
@@ -19,6 +19,11 @@ EmulationIssues =
 
 [Video_Hacks]
 EFBEmulateFormatChanges = True
+EFBToTextureEnable = False # Correct lens flare
 
 [Video_Stereoscopy]
 StereoConvergence = 613
+
+[Video_Settings]
+MSAA = 0 # Avoid overbloom
+UseXFB = False # Prevent blue box
