--- a/Data/Sys/GameSettings/SMN.ini
+++ b/Data/Sys/GameSettings/SMN.ini
@@ -24,3 +24,6 @@ SafeTextureCacheColorSamples = 512
 [Video_Stereoscopy]
 #Only affects overworld map
 StereoConvergence = 2211
+
+[Video_Enhancements]
+ForceFiltering = True # Fix shading
