Added recommended settings

--- a/Data/Sys/GameSettings/SF8.ini
+++ b/Data/Sys/GameSettings/SF8.ini
@@ -23,3 +23,7 @@ SafeTextureCacheColorSamples = 512
 
 [Video_Stereoscopy]
 StereoConvergence = 26
+
+[Video_Hacks]
+EFBToTextureEnable = False # Prevent flickering/invisible Kongs (OpenGL)
+EFBScaledCopy = False # Prevent flickering/invisible Kongs (Direct3D)
