--- a/Data/Sys/GameSettings/R8P.ini
+++ b/Data/Sys/GameSettings/R8P.ini
@@ -2,6 +2,7 @@
 
 [Core]
 # Values set here will override the main Dolphin settings.
+GFXBackend = OGL # Stability
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
@@ -18,7 +19,5 @@ EmulationIssues = Needs Efb to Ram for BBox (proper graphics).
 # Add action replay cheats here.
 
 [Video_Hacks]
-EFBToTextureEnable = False
-
-[Video_Hacks]
-BBoxEnable = True
+EFBToTextureEnable = False # Fix transitions
+UseBBox = True # Stability
