Added recommended settings

--- a/Data/Sys/GameSettings/R8P.ini
+++ b/Data/Sys/GameSettings/R8P.ini
@@ -20,4 +20,4 @@ EmulationIssues = Needs Efb to Ram for BBox (proper graphics).
 
 [Video_Hacks]
 EFBToTextureEnable = False # Fix transitions
-UseBBox = True # Stability
+UseBBox = True # Required for proper functionality
