Added recommended settings

--- a/Data/Sys/GameSettings/RM3.ini
+++ b/Data/Sys/GameSettings/RM3.ini
@@ -19,7 +19,7 @@ EmulationIssues =
 
 [Video_Settings]
 SafeTextureCacheColorSamples = 512
-UseRealXFB = False # Prevent black bar
+UseRealXFB = True # Prevent black bar
 
 [Video_Hacks]
 EFBToTextureEnable = False
