Added recommended settings

--- a/Data/Sys/GameSettings/RM3.ini
+++ b/Data/Sys/GameSettings/RM3.ini
@@ -20,6 +20,7 @@ EmulationIssues =
 [Video_Settings]
 SafeTextureCacheColorSamples = 512
 UseXFB = True # Prevent black bar
+UseRealXFB = False
 
 [Video_Hacks]
 EFBToTextureEnable = False
