--- a/Data/Sys/GameSettings/R7P.ini
+++ b/Data/Sys/GameSettings/R7P.ini
@@ -2,7 +2,7 @@
 
 [Core]
 # Values set here will override the main Dolphin settings.
-SkipIdle = False # Speedup
+SyncOnIdleSkippingHack = False # Speedup
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
