--- a/Data/Sys/GameSettings/SNG.ini
+++ b/Data/Sys/GameSettings/SNG.ini
@@ -1,12 +1,12 @@
-# WTXEJS, WTXPJS - Texas Hold'em Tournament
+# SNGEJJ, SNGPLG - Get Fit with Mel B
 
 [Core]
 # Values set here will override the main Dolphin settings.
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
-EmulationStateId = 4
-EmulationIssues =
+EmulationStateId = 
+EmulationIssues = If part of the text is corrupt, increase the texture cache accuracy
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -18,5 +18,4 @@ EmulationIssues =
 # Add action replay cheats here.
 
 [Video_Settings]
-UseXFB = True
-UseRealXFB = True
+SafeTextureCacheColorSamples = 0
