--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -11,3 +11,6 @@ add_subdirectory(VideoBackends)
 if(ENABLE_QT2)
 	add_subdirectory(DolphinQt2)
 endif()
+if(IPHONEOS)
+	add_subdirectory(DolphinUIKit)
+endif()
