--- a/Source/Core/Common/CMakeLists.txt
+++ b/Source/Core/Common/CMakeLists.txt
@@ -81,6 +81,9 @@ endif()
 
 if(WIN32)
     set(SRCS ${SRCS} GL/GLInterface/WGL.cpp)
+elseif(IPHONEOS)
+    set(SRCS ${SRCS} GL/GLInterface/EAGL.cpp)
+    set(LIBS ${LIBS} ${OPENGLES_LIBRARY})
 elseif(APPLE)
     set(SRCS ${SRCS} GL/GLInterface/AGL.cpp)
 elseif(USE_X11)
