--- a/Source/UnitTests/CMakeLists.txt
+++ b/Source/UnitTests/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(LIBS core gtest)
-if(APPLE)
+if(APPLE AND NOT IPHONEOS)
 	list(APPEND LIBS ${FOUNDATION_LIBRARY} ${CORESERV_LIBRARY})
 endif()
 if(ANDROID)
