--- a/Source/Android/app/build.gradle
+++ b/Source/Android/app/build.gradle
@@ -200,7 +200,7 @@ String getNdkPath() {
             def stdout = new ByteArrayOutputStream()
 
             exec {
-                // ndk-build.cmd is a file unique to the root directory of android-ndk-r10e.
+                // ndk-build.cmd is a file unique to the root directory of android-ndk-r11c.
                 commandLine 'locate', 'ndk-build.cmd'
                 standardOutput = stdout
             }
