--- a/Source/Android/app/build.gradle
+++ b/Source/Android/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     // Leanback support requires >22
     compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    buildToolsVersion '23.0.3'
 
     lintOptions {
         // This is important as it will run lint but not abort on error
@@ -15,7 +15,7 @@ android {
         // TODO If this is ever modified, change application_id in strings.xml
         applicationId "org.dolphinemu.dolphinemu"
         minSdkVersion 21
-        targetSdkVersion 21
+        targetSdkVersion 22
 
         // TODO This should be set to the Buildbot build number for release builds, and be "1" for debug builds.
         versionCode 13
@@ -60,14 +60,14 @@ android {
     // of product flavors are paid vs. free, ARM vs. x86, etc.
     productFlavors {
         arm_64 {
-            flavorDimension "abi"
+            dimension "abi"
             ndk {
                 abiFilter "arm64-v8a"
             }
         }
 
         x86_64 {
-            flavorDimension "abi"
+            dimension "abi"
             ndk {
                 abiFilter "x86_64"
             }
@@ -76,16 +76,16 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v13:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:support-v13:23.2.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
 
     // Android TV UI libraries.
-    compile 'com.android.support:leanback-v17:23.1.1'
+    compile 'com.android.support:leanback-v17:23.2.1'
 
     // For showing the banner as a circle a-la Material Design Guidelines
-    compile 'de.hdodenhof:circleimageview:1.2.2'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 
     // For loading huge screenshots from the disk.
     compile 'com.squareup.picasso:picasso:2.5.2'
