--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ Source/Core/Common/scmrev.h
 *.vcxproj.user
 *.obj
 *.tlog
+*.VC.opendb
+*.VC.db
+.vs/
 # Ignore build info file created by QtCreator
 CMakeLists.txt.user
 # Ignore files created by posix people
