Add EFB access to Super Mario Sunshine's INI and clean up old stuff

--- a/Data/Sys/GameSettings/GMS.ini
+++ b/Data/Sys/GameSettings/GMS.ini
@@ -6,7 +6,7 @@
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
-EmulationIssues = Needs EFB to Ram and no texture filtering for the goo.
+EmulationIssues = Needs Store EFB Copies to Texture Only disabled and Force Texture Filtering disabled for the goo. Needs Skip EFB Access from CPU disabled for making the analog stick not act as if Mario constantly is behind a tree. Needs anti-aliasing disabled for both.
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -18,19 +18,16 @@ EmulationIssues = Needs EFB to Ram and no texture filtering for the goo.
 # Add action replay cheats here.
 
 [Video]
-ProjectionHack = 0
-PH_SZNear = 0
-PH_SZFar = 0
-PH_ExtraParam = 0
-PH_ZNear =
-PH_ZFar =
 PerfQueriesEnable = True
+
+[Video_Settings]
+MSAA = 0
 
 [Video_Hacks]
 EFBToTextureEnable = False
+EFBAccessEnable = True
 
 [Video_Enhancements]
-MaxAnisotropy = 0
 ForceFiltering = False
 
 [Video_Stereoscopy]
