Fix camera angles in Wind Waker and Twilight Princess GC, settings for Dancing Stage: Mario Mix

--- a/Data/Sys/GameSettings/GWZ.ini
+++ b/Data/Sys/GameSettings/GWZ.ini
@@ -16,3 +16,12 @@ EmulationStateId = 5
 [ActionReplay]
 # Add action replay cheats here.
 
+[VR]
+UnitsPerMetre = 100.0
+AimDistance = 30.0
+MinFOV = 20.0
+CameraMinPoly = 15000
+CanReadCameraAngles = false
+DetectSkybox = false
+VRStateId = 2
+VRIssues = camera angles, motion sickness, gamepad not dancemat, broken shadows, extra world in miniature
