--- a/Data/Sys/GameSettings/GZ2.ini
+++ b/Data/Sys/GameSettings/GZ2.ini
@@ -35,6 +35,7 @@ TelescopeFOV = 18
 TelescopeEye = 3
 CameraPitch = 5.000000
 CanReadCameraAngles = True
+CameraMinPoly = 25000
 VRStateId = 4
 VRIssues = Effects are missing, water has no reflections, hawkeye has problem in top left corner
 
