--- a/Data/Sys/GameSettings/GZL.ini
+++ b/Data/Sys/GameSettings/GZL.ini
@@ -47,6 +47,7 @@ CameraPitch = 10.000000
 TelescopeFOV = 6
 TelescopeEye = 1
 CanReadCameraAngles = True
+CameraMinPoly = 4000
 DetectSkybox = False
 
 [HideObjectCodes]
