[Qt]: Enable Qt on Mac OSX.
* Enables Qt on OSX
* Makes it look pretty

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ endif()
 
 if(APPLE)
 	option(SKIP_POSTPROCESS_BUNDLE "Skip postprocessing bundle for redistributability" OFF)
+	set(ENABLE_QT2 1)
 endif()
 ########################################
 # Optional Targets
