[Qt] Add settings window
Add General and Graphics Pages

Started to read settings from config files

--- a/Source/Core/DolphinQt2/CMakeLists.txt
+++ b/Source/Core/DolphinQt2/CMakeLists.txt
@@ -14,6 +14,9 @@ set(SRCS
 	Settings.cpp
 	ToolBar.cpp
 	Config/PathDialog.cpp
+	Config/SettingsWindow.cpp
+	Config/GeneralPage.cpp
+	Config/GraphicsPage.cpp
 	GameList/GameFile.cpp
 	GameList/GameList.cpp
 	GameList/GameListModel.cpp
