Fix broken game INIs (comments starting in the middle of lines)
290204e added comments that start in the middle of lines, which isn't
allowed. I moved all such comments to EmulationIssues.

--- a/Data/Sys/GameSettings/RMC.ini
+++ b/Data/Sys/GameSettings/RMC.ini
@@ -6,7 +6,7 @@
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
-EmulationIssues =
+EmulationIssues = There may be too much bloom when using anti-aliasing
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -24,4 +24,4 @@ EFBEmulateFormatChanges = True
 StereoConvergence = 613
 
 [Video_Settings]
-MSAA = 0 # Avoid overbloom
+MSAA = 0
