--- a/Data/Sys/GameSettings/R8P.ini
+++ b/Data/Sys/GameSettings/R8P.ini
@@ -6,7 +6,7 @@
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 5
-EmulationIssues = Needs Efb to Ram for BBox (proper graphics).
+EmulationIssues = Needs Efb to Ram and BBox (proper graphics and functionality).
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -18,5 +18,5 @@ EmulationIssues = Needs Efb to Ram for BBox (proper graphics).
 # Add action replay cheats here.
 
 [Video_Hacks]
-EFBToTextureEnable = False # Fix transitions
-BBoxEnable = True # Required for proper functionality
+EFBToTextureEnable = False
+BBoxEnable = True
