--- a/Data/Sys/GameSettings/R64.ini
+++ b/Data/Sys/GameSettings/R64.ini
@@ -1,13 +1,13 @@
-# R64E01, R64J01, R64K01, R64P01 - RVL Wii Music
+# R64E01, R64J01, R64K01, R64P01 - Wii Music
 
 [Core]
 # Values set here will override the main Dolphin settings.
-SyncGPU = True # Prevent CPU/GPU desync
+SyncGPU = True
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
-EmulationIssues =
+EmulationIssues = Needs SyncGPU or single core to avoid CPU/GPU desyncs
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
