--- a/Source/Core/DolphinQt2/DolphinQt2.vcxproj
+++ b/Source/Core/DolphinQt2/DolphinQt2.vcxproj
@@ -77,52 +77,56 @@
   <!--MOC files need to be listed. Perhaps scan for Q_OBJECT in the future? (like automoc)-->
   <!--NOTE: When adding moc'd files, you must list the outputs in the following ItemGroup!-->
   <ItemGroup>
-    <QtMoc Include="MainWindow.h" />
-    <QtMoc Include="ToolBar.h" />
-    <QtMoc Include="MenuBar.h" />
+    <QtMoc Include="AboutDialog.h" />
+    <QtMoc Include="Config\PathDialog.h" />
+    <QtMoc Include="Config\SettingsWindow.h" />
+    <QtMoc Include="GameList\GameFile.h" />
     <QtMoc Include="GameList\GameList.h" />
     <QtMoc Include="GameList\GameListModel.h" />
-    <QtMoc Include="GameList\GameFile.h" />
     <QtMoc Include="GameList\GameTracker.h" />
     <QtMoc Include="GameList\ListProxyModel.h" />
-    <QtMoc Include="GameList\TableProxyModel.h" />
-    <QtMoc Include="RenderWidget.h" />
+    <QtMoc Include="GameList\TableDelegate.h" />
     <QtMoc Include="Host.h" />
+    <QtMoc Include="MainWindow.h" />
+    <QtMoc Include="MenuBar.h" />
+    <QtMoc Include="RenderWidget.h" />
     <QtMoc Include="Settings.h" />
-    <QtMoc Include="Config\PathDialog.h" />
+    <QtMoc Include="ToolBar.h" />
   </ItemGroup>
   <!--TODO figure out how to get QtMoc to add outputs to ClCompile's inputs...-->
   <ItemGroup>
-    <ClCompile Include="$(QtMocOutPrefix)MainWindow.cpp" />
-    <ClCompile Include="$(QtMocOutPrefix)ToolBar.cpp" />
-    <ClCompile Include="$(QtMocOutPrefix)MenuBar.cpp" />
-    <ClCompile Include="$(QtMocOutPrefix)RenderWidget.cpp" />
-    <ClCompile Include="$(QtMocOutPrefix)Host.cpp" />
+    <ClCompile Include="$(QtMocOutPrefix)AboutDialog.cpp" />
+    <ClCompile Include="$(QtMocOutPrefix)GameFile.cpp" />
     <ClCompile Include="$(QtMocOutPrefix)GameList.cpp" />
     <ClCompile Include="$(QtMocOutPrefix)GameListModel.cpp" />
-    <ClCompile Include="$(QtMocOutPrefix)GameFile.cpp" />
     <ClCompile Include="$(QtMocOutPrefix)GameTracker.cpp" />
+    <ClCompile Include="$(QtMocOutPrefix)Host.cpp" />
     <ClCompile Include="$(QtMocOutPrefix)ListProxyModel.cpp" />
-    <ClCompile Include="$(QtMocOutPrefix)TableProxyModel.cpp" />
-    <ClCompile Include="$(QtMocOutPrefix)Settings.cpp" />
+    <ClCompile Include="$(QtMocOutPrefix)MainWindow.cpp" />
+    <ClCompile Include="$(QtMocOutPrefix)MenuBar.cpp" />
     <ClCompile Include="$(QtMocOutPrefix)PathDialog.cpp" />
+    <ClCompile Include="$(QtMocOutPrefix)RenderWidget.cpp" />
+    <ClCompile Include="$(QtMocOutPrefix)Settings.cpp" />
+    <ClCompile Include="$(QtMocOutPrefix)SettingsWindow.cpp" />
+    <ClCompile Include="$(QtMocOutPrefix)TableDelegate.cpp" />
+    <ClCompile Include="$(QtMocOutPrefix)ToolBar.cpp" />
+    <ClCompile Include="AboutDialog.cpp" />
     <ClCompile Include="Config\PathDialog.cpp" />
+    <ClCompile Include="Config\SettingsWindow.cpp" />
     <ClCompile Include="GameList\GameFile.cpp" />
     <ClCompile Include="GameList\GameList.cpp" />
     <ClCompile Include="GameList\GameListModel.cpp" />
     <ClCompile Include="GameList\GameTracker.cpp" />
     <ClCompile Include="GameList\ListProxyModel.cpp" />
-    <ClCompile Include="GameList\TableProxyModel.cpp" />
+    <ClCompile Include="GameList\TableDelegate.cpp" />
+    <ClCompile Include="Host.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="MenuBar.cpp" />
     <ClCompile Include="RenderWidget.cpp" />
     <ClCompile Include="Resources.cpp" />
     <ClCompile Include="Settings.cpp" />
     <ClCompile Include="ToolBar.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Host.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="MainWindow.cpp" />
   </ItemGroup>
   <!--Put standard C/C++ headers here-->
   <!--
@@ -184,6 +188,9 @@
     </ProjectReference>
     <ProjectReference Include="..\..\..\Languages\Languages.vcxproj">
       <Project>{0e033be3-2e08-428e-9ae9-bc673efa12b5}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\VideoBackends\D3D12\D3D12.vcxproj">
+      <Project>{570215b7-e32f-4438-95ae-c8d955f9fca3}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
